--- a/buscador/css/index.css
+++ b/buscador/css/index.css
@@ -13,8 +13,8 @@ video#vidFondo {
 
 .contenedor{
 /*  background-color: rgba(242, 242, 242, 0.5);*/
-  width: 80%;
-  margin: 50px auto;
+  width: 90%;
+  margin: 10px auto;
   display: flex;
   flex-flow: row wrap;
   min-height: 700px;
@@ -60,6 +60,7 @@ video#vidFondo {
   width: 100%;
   height: 100px;
   text-align: center;
+  color: #222;
 }
 .filtroCiudad .select-wrapper{
   margin: 5px auto;
@@ -69,6 +70,7 @@ video#vidFondo {
   width: 100%;
   height: 100px;
   text-align: center;
+  color: #222;
 }
 .filtroTipo .select-wrapper{
   margin: 5px auto;
@@ -95,7 +97,7 @@ video#vidFondo {
   display: flex;
   flex-flow: row wrap;
   align-content: space-between;
-  padding: 20px;
+  padding: 2px;
 }
 .tituloContenido{
   width: 100%;
@@ -105,6 +107,7 @@ video#vidFondo {
   flex-flow: row wrap;
   justify-content: center;
   padding: 5px;
+  color: #222;
 }
 .tituloContenido h5{
   width: 100%;
@@ -161,37 +164,36 @@ table
 
 .table_header
 {
-        border:  2px solid black;
-	background-color: #6fa0df; 
-	color: #222; 
+        border:  1px solid black;
+	background-color: #648C7D; 
+	color: #fff; 
 	font-size: 14px; 
 	font-weight: bold;
 }
 
 table, th, td {
-    border: 1px solid black;
+    border: 0px solid black;
     border-collapse: collapse;
 }
 th, td {
     padding: 15px;
-    text-align: left;
+    text-align: center;
 }
 table #t01 tr:nth-child(even) {
     background-color: #eee;
+    color: #222;
 }
 table #t01 tr:nth-child(odd) {
    background-color: #fff;
+   color: #222;
 }
-table #t01 th {
-    background-color: #648C7D;
-    color: white;
-}
+
 /*   */
 * {margin:0;padding:0; border: 0 none; position: relative;}
 *, *:before, *:after {box-sizing: inherit;}
 html{
   box-sizing: border-box;
-  background: #0D757D;
+  background: #fff;
   font-size: 1rem;
   color: #e6eff0;
 }
@@ -202,7 +204,7 @@ h1 {
 }
 table * {height: auto; min-height: none;} /* fixed ie9 & <*/
 table {
-  background: #15BFCC;
+  background:  #eee;
   table-layout: fixed;
   margin: 1rem auto;
   width: 98%;
@@ -212,17 +214,17 @@ table {
   border-top: 0 none;
 }
 thead {
-  background: #FF7361;
+  background: rgba(0,0,0,.2);
   text-align: center;
   z-index: 2;
 }
 thead tr {
-  padding-right: 17px;
+  padding-right: 1px;
   box-shadow: 0 4px 6px rgba(0,0,0,.6);
   z-index: 2;
 }
 th {
-  border-right: 2px solid rgba(0,0,0,.2);
+  border-right: 1px solid rgba(0,0,0,.2);
   padding: .7rem 0;
   font-size: 1.5rem;
   font-weight: normal;
@@ -240,25 +242,20 @@ tr {
   display: block;
   overflow: hidden;
 }
-tbody tr:nth-child(odd) {
-  background: rgba(0,0,0,.2);
-}
+
 th, td {
-  width: 21%;
+  width: 16.8%;
   float:left;
 }
 td {
   padding: .5rem 0 .5rem 1rem;
-  border-right: 2px solid rgba(0,0,0,.2);
+  border-right: 0px solid rgba(0,0,0,.2);
 }
-td:nth-child(2n) {color: #fff;}
-[data-campo='Mail'] {
-  width: 30%;
-}  
+
 th:last-child, td:last-child {
-  width: 7%;
+  width: 16%;
   text-align: center;
-  border-right: 0 none;
+  border-right: 1 none;
   padding-left: 0;
 }
 
@@ -275,8 +272,8 @@ th:last-child, td:last-child {
   tr {
     border-bottom: 2px solid rgba(0,0,0,.35);
   }
-  tbody tr:nth-child(odd) {background: #15BFCC;}
-  tbody tr:nth-child(even) {background:#FF7361;}
+  tbody tr:nth-child(odd) {background: #eee;}
+  tbody tr:nth-child(even) {background:#fff;}
   td {
     display: block;
     width: 100%;
